--- a/src/scss/ready_page.scss
+++ b/src/scss/ready_page.scss
@@ -1,22 +1,30 @@
-//colors
-$color_chilean_heath_approx: #fffde7;
-$color_chicago_approx: #5d5c56;
-$white_80: rgba(255,255,255,0.8);
+$color_1: #5d5c56;
+$background_color_1: rgba(255,255,255,0.8);
 
 body {
 	height: 2000px;
-	background: $color_chilean_heath_approx;
-	color: $color_chicago_approx;
+	background: #fffde7;
+	color: $color_1;
 }
 .slick-item {
 	max-width: 100%;
-	width: 100%!important;
+	width: 100% !important;
 	height: auto;
 }
-.slick-single {
-	width: 100%!important;
+.js-section {
 	br {
 		display: none;
+	}
+}
+.slick-single {
+	br {
+		display: none;
+	}
+	width: 100% !important;
+}
+.slick-slider {
+	.slick-list {
+		transform: none;
 	}
 }
 .wrapper {
@@ -33,10 +41,19 @@ body {
 	height: auto;
 }
 .flex_right {
-	display: flex!important;
+	display: flex !important;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: flex-end;
+}
+div.text_wrapper {
+	display: flex !important;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
+	position: relative;
+	padding: 5em 3em;
+	z-index: 1000;
 }
 #textWrap {
 	position: relative;
@@ -55,35 +72,22 @@ body {
 		text-align: left;
 	}
 }
-.my-svg {
-}
 #coords {
 	position: absolute;
 	right: 5px;
 	bottom: 5px;
 	padding: 3px 6px;
-	background-color: $white_80;
+	background-color: $background_color_1;
 }
 #lightPath {
-	//Instead of the line below you could use @include transform-origin($origin-x, $origin-y, $origin-z, $only3d)
+	-moz-transform-origin: 520px 300px;
+	-ms-transform-origin: 520px 300px;
+	-o-transform-origin: 520px 300px;
+	-webkit-transform-origin: 520px 300px;
 	transform-origin: 520px 300px;
 }
-.js-section br {
-	display: none;
-}
-.slick-slider .slick-list {
-	//Instead of the line below you could use @include transform($scale, $rotate, $transx, $transy, $skewx, $skewy, $originx, $originy)
-	transform: none;
-}
-div.text_wrapper {
-	display: flex!important;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: flex-start;
-	position: relative;
-	padding: 5em 3em;
-	z-index: 1000;
-}
-.single_image img {
-	width: 100%!important;
+.single_image {
+	img {
+		width: 100% !important;
+	}
 }
