--- a/src/scss/drawn_map.scss
+++ b/src/scss/drawn_map.scss
@@ -1,45 +1,64 @@
-//colors
-$color_chilean_heath_approx: #fffde7;
-$color_chicago_approx: #5d5c56;
-$color_puerto_rico_approx: #2bbbad;
-$color_malibu_approx: #64b5f6;
-$color_wedgewood_43_approx: rgba(69, 150, 150, 0.43);
-$white: #fff;
-$color_cape_cod_approx: #424040;
-$seashell: #f1f1f1;
-$color_perano_approx: #9fcbff;
-$color_mosque_approx: #005e6f;
-$color_spray_approx: #80deea;
-$color_star_dust_approx: #9e9e9e;
-$color_bon_jour_approx: #e0e0e0;
-$color_celeste_approx: #ccc;
-$color_gossamer_approx: #009688;
-$color_charlotte_approx: #b2ebf2;
-$black: #000;
+$color_1: #5d5c56;
+$color_2: #2bbbad;
+$color_3: #64b5f6;
+$color_4: #ffffff;
+$color_5: #f1f1f1;
+$color_6: #4db6ac;
+$color_7: #80deea;
+$color_8: #fff;
+$color_9: #009688;
+$color_10: #b2ebf2;
+$color_11: #000;
+$background_color_1: #fff;
+$background_color_2: #424040;
+$background_color_3: #9e9e9e;
+$background_color_4: #e0e0e0;
+$background_color_5: #4db6ac;
 
+/* The side navigation menu */
+/* The navigation menu links */
+/* When you mouse over the navigation links, change their color */
+/* Position and style the close button (top right corner) */
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+/*#main {
+    transition: margin-left .5s;
+    padding: 20px;
+    height: 900px;
+    position: relative;
+}*/
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+/*.zoom_input{
+  width: 50%!important;
+  color: #fff;
+  margin: 0 auto;
+}*/
+/*.show_icon-title{
+  text-transform: uppercase;
+  color: #2bbbad;
+  font-style: italic;
+}*/
 body {
-  background: $color_chilean_heath_approx;
-  color: $color_chicago_approx;
+  background: #fffde7;
+  color: $color_1;
   overflow-x: hidden;
   display: flex;
   min-height: 100%;
   flex-direction: column;
 }
 .sidenav__title {
-  color: $color_puerto_rico_approx;
+  color: $color_2;
   text-align: center;
   text-transform: uppercase;
   font-style: italic;
-  margin-top: 5px!important;
-  margin-bottom: 5px!important;
+  margin-top: 5px !important;
+  margin-bottom: 5px !important;
 }
 #title {
   text-transform: uppercase;
   letter-spacing: 2px;
   font-style: bold;
-  color: $color_malibu_approx;
-  //Instead of the line below you could use @include text-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
-  text-shadow: 3px 0 9px $color_wedgewood_43_approx;
+  color: $color_3;
+  text-shadow: 3px 0px 9px rgba(69, 150, 150, 0.43);
 }
 .wrapper {
   width: 100%;
@@ -47,7 +66,18 @@ body {
 }
 .ui-resizable-e {
   width: 8px;
-  background-color: $white;
+  background-color: $background_color_1;
+}
+.ui-resizable-resizing {
+  &:after {
+    content: '';
+    position: absolute;
+    z-index: 999;
+    left: 0px;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+  }
 }
 .mapbg {
   background-repeat: no-repeat;
@@ -61,25 +91,22 @@ body {
   position: absolute;
   z-index: 5;
   top: 0;
-  //Instead of the line below you could use @include box-sizing($bs)
   box-sizing: content-box;
   overflow-y: hidden;
   left: 0;
-  background-color: $color_cape_cod_approx;
+  background-color: $background_color_2;
   overflow-x: hidden;
   padding-top: 60px;
-  //Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
   transition: 0.5s;
   a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: $white;
+    color: $color_4;
     display: block;
-    //Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
     transition: 0.3s;
     &:hover {
-      color: $seashell;
+      color: $color_5;
     }
   }
   .closebtn {
@@ -94,7 +121,7 @@ body {
   .sidenav__title {
     text-align: center;
     text-transform: uppercase;
-    color: $color_spray_approx;
+    color: $color_7;
     font-style: italic;
     font-size: 15px;
   }
@@ -103,19 +130,26 @@ body {
     margin-bottom: 10px;
   }
 }
+.offcanvas {
+  a {
+    &:focus {
+      color: $color_5;
+    }
+  }
+}
 #head {
   position: relative;
   width: 100%;
   height: 900px;
 }
 .cke_chrome {
-  border: 1px solid $color_perano_approx!important;
+  border: 1px solid #9fcbff !important;
 }
 .cke_inner {
-  background: linear-gradient(to bottom, $white -15px, $color_mosque_approx 40px);
+  background: linear-gradient(to bottom, #fff -15px, #005e6f 40px);
 }
 .cke_dialog_background_cover {
-  overflow: auto!important;
+  overflow: auto !important;
 }
 #point_textData {
   min-height: 100px;
@@ -124,22 +158,14 @@ body {
   max-width: 96%;
   height: 755px;
   max-height: 755px;
-  margin: 0 1%;
-  color: $color_puerto_rico_approx;
+  margin: 0 1% 0 1%;
+  color: $color_6;
   font-style: italic;
-  border: 1px dashed $color_puerto_rico_approx;
-}
-@media screen and(max-height: 450px) {
-  .sidenav {
-    padding-top: 15px;
-    a {
-      font-size: 18px;
-    }
-  }
+  border: 1px dashed #4db6ac;
 }
 #cke_point_textData {
   width: 94%;
-  margin: 0 1%;
+  margin: 0 1% 0 1%;
 }
 .btn_wrapper {
   margin: 5%;
@@ -150,48 +176,52 @@ body {
   width: 60%;
   font-size: 16px;
   text-transform: uppercase;
-  color: $white;
-  padding: 0;
-  //Instead of the line below you could use @include border-radius($radius, $vertical-radius)
+  color: $color_8;
+  padding: 0px;
   border-radius: 6px;
+}
+ul {
+  input {
+    margin: 0;
+  }
 }
 .collapsible {
   width: 96%;
-  margin: 2%;
-  //Instead of the line below you could use @include border-radius($radius, $vertical-radius)
+  margin: 2% 2% 2% 2%;
   border-radius: 5px;
 }
 .collapsible-body {
   padding: 0.1rem;
-  background-color: $color_star_dust_approx;
-  //Instead of the line below you could use @include border-radius($radius, $vertical-radius)
+  background-color: $background_color_3;
   border-radius: 2px;
 }
 .collapsible-header {
-  background-color: $color_bon_jour_approx;
-  border-bottom: 1px solid $color_celeste_approx;
-  color: $color_gossamer_approx;
+  background-color: $background_color_4;
+  border-bottom: 1px solid #ccc;
+  color: $color_9;
   font-style: italic;
-  //Instead of the line below you could use @include text-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
   text-shadow: -3px -1px 5px rgba(152, 150, 150, 6);
   padding: 0.7rem;
 }
 .valueInput {
-  margin: 0!important;
-  color: $color_charlotte_approx;
+  margin: 0 !important;
+  color: $color_10;
   height: 2.2rem;
   font-style: italic;
 }
-input::-webkit-outer-spin-button {
-  margin: 0;
-}
-input::-webkit-inner-spin-button {
-  margin: 0;
+input {
+  &::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 }
 h1 {
   margin: 0;
   z-index: 100;
-  //Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
   transition: margin-left .5s;
   font-size: 2.5rem;
   text-align: center;
@@ -209,12 +239,20 @@ h1 {
   height: 48px;
   line-height: 48px;
 }
-nav {
-  background-color: $color_puerto_rico_approx;
-  &.nav-extended {
-    height: 48px;
-    line-height: 48px;
+nav.nav-extended {
+  height: 48px;
+  line-height: 48px;
+}
+.tap-target-wrapper.open {
+  .tap-target {
+    transform: scale(3.2);
+    opacity: 0.75;
+    transform: scale(3.2);
+    opacity: 0.75;
   }
+}
+nav {
+  background-color: $background_color_5;
   i.material-icons {
     line-height: 41px;
     font-size: 30px;
@@ -227,13 +265,13 @@ nav {
 .tap-target-content {
   line-height: 20px;
   font-size: 0.7em;
-  padding: 0 110px!important;
+  padding: 0 110px !important;
 }
 .btn_wrap {
   width: 100%;
   display: flex;
   justify-content: space-around;
-  margin: 18px 0 8px;
+  margin: 18px 0 8px 0;
 }
 .point_name_block {
   display: flex;
@@ -246,19 +284,26 @@ nav {
   margin: 0;
 }
 #modal1 {
-  z-index: 12000!important;
+  z-index: 12000 !important;
 }
 .icon_checkbox {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  border-top: 1px dashed $color_celeste_approx;
-  border-bottom: 1px dashed $color_celeste_approx;
+  border-top: 1px dashed #ccc;
+  border-bottom: 1px dashed #ccc;
   padding: 2% 0;
+}
+#icon_switch {
+  label {
+    text-transform: uppercase;
+    color: $color_2;
+    font-style: italic;
+  }
 }
 table {
   tr {
-    border: 1px solid $color_celeste_approx;
+    border: 1px solid #ccc;
     position: relative;
   }
   p {
@@ -266,12 +311,12 @@ table {
   }
 }
 th {
-  border: 1px solid $color_celeste_approx;
+  border: 1px solid #ccc;
   position: relative;
   text-align: center;
 }
 td {
-  border: 1px solid $color_celeste_approx;
+  border: 1px solid #ccc;
   position: relative;
   width: 80%;
 }
@@ -284,37 +329,21 @@ td {
   cursor: pointer;
 }
 .centered {
-  letter-spacing: 0!important;
+  letter-spacing: 0 !important;
 }
-.ui-resizable-resizing:after {
-  content: '';
-  position: absolute;
-  z-index: 999;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
+.minicolors-theme-default {
+  .minicolors-input {
+    height: 30px !important;
+    border-radius: 4px;
+    outline: none;
+    color: $color_11;
+  }
 }
-.offcanvas a:focus {
-  color: $seashell;
-}
-ul input {
-  margin: 0;
-}
-.tap-target-wrapper.open .tap-target {
-  //Instead of the line below you could use @include transform($scale, $rotate, $transx, $transy, $skewx, $skewy, $originx, $originy)
-  transform: scale(3.2);
-  opacity: 0.75;
-}
-#icon_switch label {
-  text-transform: uppercase;
-  color: $color_puerto_rico_approx;
-  font-style: italic;
-}
-.minicolors-theme-default .minicolors-input {
-  height: 30px!important;
-  //Instead of the line below you could use @include border-radius($radius, $vertical-radius)
-  border-radius: 4px;
-  outline: none;
-  color: $black;
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+    a {
+      font-size: 18px;
+    }
+  }
 }
