--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,88 +1,69 @@
-//colors
-$color_gallery_approx: #eee;
-$color_celeste_approx: #ccc;
-$color_silver_chalice_approx: #aaa;
-$white: #fff;
-$black_25: rgba(0, 0, 0, 0.25);
-$white_80: rgba(255, 255, 255, 0.8);
-$black_15: rgba(0, 0, 0, 0.15);
-$color_teal_approx: #088;
-$color_alto_approx: #ddd;
-$color_lochmara_approx: #08c;
-$white_10: rgba(255, 255, 255, 0.10);
-$color_caribbean_green_approx: #0c8;
-$color_stratos_approx: #004;
-$black_50: rgba(0, 0, 0, 0.5);
-$black_20: rgba(0, 0, 0, 0.2);
-$periwinkle: #ccf;
-$black: #000;
-$color_steel_blue_approx: #48b;
-$color_deep_fir_approx: #023300;
-$color_amour_approx: #f3e5f5;
-$color_diesel_approx: #100;
-$color_vanilla_ice_approx: #f3d6e4;
-$black_75: rgba(0, 0, 0, 0.75);
-$color_chardonnay_approx: #ffcf85;
-$red: #ff0000;
-$color_malibu_approx: #64b5f6;
-$color_wedgewood_43_approx: rgba(69, 150, 150, 0.43);
-$color_puerto_rico_approx: #4db6ac;
-$color_pine_green_approx: #00796b;
-$color_olivine_approx: #95c066;
-$color_carousel_pink_approx: #fce4ec;
-$color_light_wisteria_approx: #ce93d8;
-$color_japanese_laurel_approx:  green;
+$color_1: #fff;
+$color_2: #088;
+$color_3: #0c8;
+$color_4: #004;
+$color_5: rgba(0, 0, 0, 0.5);
+$color_6: #ccf;
+$color_7: #000;
+$color_8: #ddd;
+$color_9: #023300;
+$color_10: #100;
+$color_11: #64b5f6;
+$color_12: #00796b;
+$color_13: #4db6ac;
+$font_family_1: "Helvetica", sans-serif;
+$font_family_2: "Helvetica Neueu", "Helvetica", "Arial", sans-serif;
+$background_color_1: #eee;
+$background_color_2: transparent;
+$background_color_3: #fff;
+$background_color_4: #aaa;
+$background_color_5: rgba(255, 255, 255, 0.8);
+$background_color_6: rgba(255, 255, 255, 0.10);
+$background_color_7: #ddd;
+$background_color_8: #48b;
+$background_color_9: #F3D6E4;
+$background_color_10: #ffcf85;
+$background_color_11: #4db6ac;
+$background_color_12: #000;
+$background_color_13: #fce4ec;
+$background_color_14: #ce93d8;
 
-//fonts
-$font_0: Helvetica;
-$font_1: sans-serif;
-$font_2: Helvetica Neueu;
-$font_3: Arial;
-
-//@extend-elements
-//original selectors
-//html, body
-%extend_1 {
-    color: $color_deep_fir_approx;
-    background: $color_amour_approx;
+body {
+    background-color: $background_color_1;
+    overflow: hidden;
+    color: $color_9;
+    background: #f3e5f5;
     padding: 0;
     margin: 0;
     width: 100%;
     min-height: 100%;
     height: 100%;
-}
-
-
-body {
-    background-color: $color_gallery_approx;
-    overflow: hidden;
     overflow: auto;
-    @extend %extend_1;
 }
 #bezier-canvas {
     position: absolute;
     z-index: 0;
-    background-color: transparent;
+    background-color: $background_color_2;
 }
 .container {
-    width: 90%!important;
+    width: 90% !important;
 }
 .wrap_map {
     width: 1200px;
     height: 900px;
     overflow: hidden;
-    border: 1px solid $color_celeste_approx;
+    border: 1px solid #ccc;
     &:hover {
-        border: 1px solid $color_silver_chalice_approx;
+        border: 1px solid #aaa;
     }
 }
 canvas {
     cursor: crosshair;
-    margin: 0;
-    background-color: $white;
-    &.select {
-        cursor: default !important;
-    }
+    margin: 0 0;
+    background-color: $background_color_3;
+}
+canvas.select {
+    cursor: default !important;
 }
 #dataMap {
     position: absolute;
@@ -95,106 +76,141 @@ canvas {
     position: relative;
 }
 .vectorlist-wrapper {
-    background-color: $color_silver_chalice_approx;
-    border-left: 1px solid $black_25;
-    font-family: $font_0, $font_1;
+    background-color: $background_color_4;
+    border-left: 1px solid rgba(0, 0, 0, 0.25);
+    font-family: $font_family_1;
     position: fixed;
     right: -95px;
-    top: 0;
+    top: 0px;
     width: 100px;
     max-height: 600px;
     overflow-y: auto;
     &:after {
         height: 30px;
         content: ":";
-        color: $white;
+        color: $color_1;
         width: 5px;
-        border-left: 1px dashed $color_gallery_approx;
+        border-left: 1px dashed #eee;
         position: fixed;
         right: 2px;
         top: 45%;
     }
     &:hover {
-        background-color: $white_80;
-        //Instead of the line below you could use @include box-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
-        box-shadow: -2px 0 4px $black_15;
+        background-color: $background_color_5;
+        box-shadow: -2px 0px 4px rgba(0, 0, 0, 0.15);
         z-index: 9999;
-        right: 0;
+        right: 0px;
         width: 120px;
-        //Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
+        -webkit-transition: all 0.2s;
+        -moz-transition: all 0.2s;
+        -o-transition: all 0.2s;
         transition: all 0.2s;
         &:after {
             display: none;
         }
     }
     h3 {
-        background-color: $white;
+        background-color: $background_color_3;
         padding: 7px 5px;
         font-size: 0.65em;
-        color: $color_teal_approx;
+        color: $color_2;
         text-transform: uppercase;
         text-align: center;
-        border-bottom: 2px solid $color_alto_approx;
+        border-bottom: 2px solid #ddd;
+    }
+}
+.vectorlist {
+    >li {
+        text-align: center;
+        border-bottom: 1px solid #ccc;
+        border-left: 5px solid #08c;
+        cursor: pointer;
+        padding: 5px 20px;
+        font-size: 0.65em;
+        text-transform: upper;
+        background-color: $background_color_6;
+        -webkit-transition: all 0.3s 0.2s;
+        -moz-transition: all 0.3s 0.2s;
+        -o-transition: all 0.3s 0.2s;
+        transition: all 0.3s 0.2s;
+        &:hover {
+            background-color: $background_color_3;
+            color: $color_3;
+            padding: 5px 35px 5px 5px;
+            -webkit-transition: all 0.2s;
+            -moz-transition: all 0.2s;
+            -o-transition: all 0.2s;
+            transition: all 0.2s;
+        }
+        &:nth-of-type(2n) {
+            border-left: 5px solid #0c8;
+        }
     }
 }
 .tools {
     width: 100%;
     position: fixed;
-    bottom: 0;
-    left: 0;
+    bottom: 0px;
+    left: 0px;
 }
 .tool {
     display: block;
     float: left;
-    font-family: $font_2, $font_0, $font_3, $font_1;
-    margin: 0;
+    font-family: $font_family_2;
+    margin: 0 0;
     padding: 6px 10px;
     text-transform: uppercase;
     font-size: 0.8em;
-    color: $color_stratos_approx;
-    background-color: $color_alto_approx;
+    color: $color_4;
+    background-color: $background_color_7;
     border: none;
-    > span {
+    >span {
         display: inline-block;
         position: relative;
         top: -2px;
         line-height: 1em;
         padding: 1px 3px;
         font-size: 0.65em;
-        color: $black_50;
-        border: 1px solid $black_20;
+        color: $color_5;
+        border: 1px solid rgba(0, 0, 0, 0.2);
     }
-    &.active {
-        background-color: $color_steel_blue_approx;
-        color: $white;
-        > span {
-            color: $periwinkle;
-            border: 1px solid $periwinkle;
-        }
-        &:before {
-            content: "using ";
-            color: $color_alto_approx;
+    &:hover {
+        &:not(.active) {
+            cursor: pointer;
+            background-color: $background_color_3;
+            color: $color_7;
+            -moz-transition: all 0.5s ease;
+            -o-transition: all 0.5s ease;
+            -webkit-transition: all 0.5s ease;
+            transition: all 0.5s ease;
         }
     }
     &:active {
-        background-color: $color_steel_blue_approx;
-        color: $white;
+        background-color: $background_color_8;
+        color: $color_1;
     }
-    &:hover:not(.active) {
-        cursor: pointer;
-        background-color: $white;
-        color: $black;
-        //Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
-        transition: all 0.5s ease;
+}
+.tool.active {
+    >span {
+        color: $color_6;
+        border: 1px solid #ccf;
+    }
+    background-color: $background_color_8;
+    color: $color_1;
+    &:before {
+        content: "using ";
+        color: $color_8;
     }
 }
 button {
-    &:focus {
-        border: $black;
+    .tool {
+        &:focus {
+            background-color: $background_color_8;
+            color: $color_1;
+        }
     }
-    .tool:focus {
-        background-color: $color_steel_blue_approx;
-        color: $white;
+    &:focus {
+        border: #000;
     }
 }
 .disabled {
@@ -206,7 +222,13 @@ button {
     }
 }
 html {
-    @extend %extend_1;
+    color: $color_9;
+    background: #f3e5f5;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    min-height: 100%;
+    height: 100%;
 }
 .centered {
     display: flex;
@@ -214,7 +236,7 @@ html {
     position: relative;
     margin-top: 20px;
     letter-spacing: 1px;
-    color: $color_diesel_approx;
+    color: $color_10;
 }
 #container {
     height: 400px;
@@ -230,73 +252,86 @@ html {
     left: 50%;
 }
 textarea {
-    margin: 10px 0;
+    margin: 10px 0px;
     font-style: italic;
     min-height: 110px;
 }
 .map_gallery {
     width: 100%;
 }
+.gallery_item {
+    &:hover {
+        background-color: $background_color_9;
+        border-radius: 12px;
+        transform: scale(1.1, 1.1);
+        transition: 0.4s;
+        -webkit-box-shadow: 0px 0px 74px 0px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 0px 0px 74px 0px rgba(0, 0, 0, 0.75);
+        box-shadow: 0px 0px 74px 0px rgba(0, 0, 0, 0.75);
+    }
+}
 .active_block {
-    background-color: $color_chardonnay_approx;
-    //Instead of the line below you could use @include border-radius($radius, $vertical-radius)
+    background-color: $background_color_10;
     border-radius: 12px;
-    //Instead of the line below you could use @include transform($scale, $rotate, $transx, $transy, $skewx, $skewy, $originx, $originy)
     transform: scale(1.1, 1.1);
-    //Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
     transition: 0.6s;
-    //Instead of the line below you could use @include box-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
-    box-shadow: 0 0 74px 0 $black_75;
+    -webkit-box-shadow: 0px 0px 74px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 74px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 74px 0px rgba(0, 0, 0, 0.75);
 }
 .buttons_bar {
     margin-top: 8px;
 }
 #test {
-    background: $red;
+    background: #FF0000;
     height: 10px;
     width: 10px;
     margin-top: -5px;
     margin-left: -5px;
-    //Instead of the line below you could use @include border-radius($radius, $vertical-radius)
     border-radius: 5px;
     position: relative;
 }
 h1 {
     margin-top: 10px;
-    margin-bottom: 0;
+    margin-bottom: 0px;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-style: bold;
     text-align: center;
     font-size: 2.5rem;
-    color: $color_malibu_approx;
-    //Instead of the line below you could use @include text-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
-    text-shadow: 3px 0 9px $color_wedgewood_43_approx;
+    color: $color_11;
+    text-shadow: 3px 0px 9px rgba(69, 150, 150, 0.43);
 }
 nav {
-    background-color: $color_puerto_rico_approx;
-    &.nav-extended {
-        height: 48px;
-        line-height: 48px;
-    }
+    background-color: $background_color_11;
     i.material-icons {
         line-height: 41px;
         font-size: 30px;
     }
 }
+.tap-target-wrapper.open {
+    .tap-target {
+        transform: scale(3.2);
+        opacity: 0.75;
+    }
+}
 .tap-target-content {
     line-height: 20px;
     font-size: 0.7em;
-    padding: 0 110px!important;
+    padding: 0 110px !important;
 }
 .navbar-fixed {
+    height: 48px;
+    line-height: 48px;
+}
+nav.nav-extended {
     height: 48px;
     line-height: 48px;
 }
 .page-footer {
     padding-top: 0;
     margin-top: 3%;
-    background-color: $color_puerto_rico_approx;
+    background-color: $background_color_11;
 }
 #buttonWrapper {
     position: absolute;
@@ -305,13 +340,13 @@ nav {
     right: 2px;
 }
 .editor_button {
-    padding: 8px 6px 0 2px;
+    padding: 8px 6px 0px 2px;
     width: 30px;
-    margin: 0 0 2px 0;
+    margin: 0px 0px 2px 0px;
     outline: none;
 }
 .material-icons {
-    color: $color_pine_green_approx;
+    color: $color_12;
 }
 #menu {
     margin-right: 10px;
@@ -320,11 +355,9 @@ nav {
 .result {
     width: 5em;
     height: 5em;
-    //Instead of the line below you could use @include border-radius($radius, $vertical-radius)
     border-radius: 30%;
-    //Instead of the line below you could use @include box-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
-    box-shadow: 0 2px 6px $black;
-    background: $color_olivine_approx;
+    box-shadow: 0 2px 6px #000;
+    background: #95C066;
     display: inline-block;
     vertical-align: middle;
     margin-left: 2em;
@@ -341,14 +374,12 @@ nav {
     justify-content: center;
     align-items: center;
 }
-.rangePicker {
-}
 input[type=range] {
     margin: 0 auto;
 }
 table {
     tr {
-        border: 1px solid $color_celeste_approx;
+        border: 1px solid #ccc;
         position: relative;
     }
     p {
@@ -356,14 +387,22 @@ table {
     }
 }
 th {
-    border: 1px solid $color_celeste_approx;
+    border: 1px solid #ccc;
     position: relative;
     text-align: center;
 }
 td {
-    border: 1px solid $color_celeste_approx;
+    border: 1px solid #ccc;
     position: relative;
     width: 80%;
+}
+.minicolors-theme-default {
+    .minicolors-input {
+        height: 30px !important;
+        border-radius: 4px;
+        outline: none;
+        color: $color_7;
+    }
 }
 .map_settings_block {
     width: 400px;
@@ -374,17 +413,15 @@ td {
 #circle_example {
     width: 20px;
     height: 20px;
-    //Instead of the line below you could use @include border-radius($radius, $vertical-radius)
     border-radius: 50%;
-    background-color: $black;
-    border: 2px solid $black;
+    background-color: $background_color_12;
+    border: 2px solid #000;
     margin: 0 auto;
 }
 .routeExample {
     width: 60%;
     height: 2px;
-    background-color: $black;
-    //Instead of the line below you could use @include border-radius($radius, $vertical-radius)
+    background-color: $background_color_12;
     border-radius: 10px;
 }
 .align_selection {
@@ -395,53 +432,53 @@ td {
 .test_block {
     width: 100%;
     height: 100px;
-    border: 2px solid $color_celeste_approx;
+    border: 2px solid #ccc;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: $color_carousel_pink_approx;
+    background-color: $background_color_13;
 }
 .content_block {
-    background-color: $color_light_wisteria_approx;
+    background-color: $background_color_14;
     width: 50%;
-    border: 1px solid $color_celeste_approx;
+    border: 1px solid #ccc;
     height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .center_align {
-    justify-content: center!important;
+    justify-content: center !important;
     width: 80%;
-    border: 1px solid $color_japanese_laurel_approx;
+    border: 1px solid green;
     height: 80px;
     display: flex;
     align-items: center;
 }
 .left_align {
-    justify-content: flex-start!important;
+    justify-content: flex-start !important;
     width: 80%;
-    border: 1px solid $color_japanese_laurel_approx;
+    border: 1px solid green;
     height: 80px;
     display: flex;
     align-items: center;
 }
 .right_align {
-    justify-content: flex-end!important;
+    justify-content: flex-end !important;
     width: 80%;
-    border: 1px solid $color_japanese_laurel_approx;
+    border: 1px solid green;
     height: 80px;
     display: flex;
     align-items: center;
 }
 #projectName {
     text-transform: uppercase;
-    color: $color_puerto_rico_approx;
+    color: $color_13;
 }
 #projectDescription {
     font-style: italic;
-    color: $color_puerto_rico_approx;
+    color: $color_13;
     max-width: 738px;
     min-width: 738px;
 }
@@ -460,49 +497,4 @@ td {
 }
 .icon_gallery__item {
     cursor: pointer;
-}
-.vectorlist > li {
-    text-align: center;
-    border-bottom: 1px solid $color_celeste_approx;
-    border-left: 5px solid $color_lochmara_approx;
-    cursor: pointer;
-    padding: 5px 20px;
-    font-size: 0.65em;
-    text-transform: upper;
-    background-color: $white_10;
-    //Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
-    transition: all 0.3s 0.2s;
-    &:hover {
-        background-color: $white;
-        color: $color_caribbean_green_approx;
-        padding: 5px 35px 5px 5px;
-        //Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
-        transition: all 0.2s;
-    }
-    &:nth-of-type(2n) {
-        border-left: 5px solid $color_caribbean_green_approx;
-    }
-}
-.gallery_item:hover {
-    background-color: $color_vanilla_ice_approx;
-    //Instead of the line below you could use @include border-radius($radius, $vertical-radius)
-    border-radius: 12px;
-    //Instead of the line below you could use @include transform($scale, $rotate, $transx, $transy, $skewx, $skewy, $originx, $originy)
-    transform: scale(1.1, 1.1);
-    //Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
-    transition: 0.4s;
-    //Instead of the line below you could use @include box-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
-    box-shadow: 0 0 74px 0 $black_75;
-}
-.tap-target-wrapper.open .tap-target {
-    //Instead of the line below you could use @include transform($scale, $rotate, $transx, $transy, $skewx, $skewy, $originx, $originy)
-    transform: scale(3.2);
-    opacity: 0.75;
-}
-.minicolors-theme-default .minicolors-input {
-    height: 30px!important;
-    //Instead of the line below you could use @include border-radius($radius, $vertical-radius)
-    border-radius: 4px;
-    outline: none;
-    color: $black;
 }
